# s3copy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml
src/: main.rs
