[package]
name = "s3copy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-runtime = "1.5.5"
aws-sdk-s3 = { version = "1.76.0" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
