[package]
default-run = "main"
edition = "2021"
name = "s3copy"
version = "0.1.0"

[dependencies]
anyhow = "1.0.100"
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
aws-runtime = "1.5.12"
aws-sdk-s3 = { version = "1.109.0" }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
